<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>br.com.smartechnology.midas</groupId>
	<artifactId>agent-server</artifactId>
	<version>1.2.0</version>
	<packaging>jar</packaging>

	<name>MIDAS Agent Server</name>

	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		<skipTests>true</skipTests>
	</properties>

	<dependencies>
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-log4j12</artifactId>
		    <version>1.7.28</version>		    
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.12</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>9.4.19.v20190610</version>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.jetty</groupId>
		    <artifactId>jetty-servlet</artifactId>
		    <version>9.4.19.v20190610</version>
		</dependency>
		<dependency>
		    <groupId>net.sourceforge.thinlet</groupId>
		    <artifactId>thinlet</artifactId>
		    <version>2005-03-28</version>
		</dependency>
		<dependency>
		    <groupId>commons-fileupload</groupId>
		    <artifactId>commons-fileupload</artifactId>
		    <version>1.0</version>
		</dependency>
		<dependency>
		    <groupId>org.ogce</groupId>
		    <artifactId>xpp3</artifactId>
		    <version>1.1.6</version>
		</dependency>
		<dependency>
		    <groupId>xstream</groupId>
		    <artifactId>xstream</artifactId>
		    <version>1.1.3</version>
		</dependency>
		<dependency>
		    <groupId>org.hibernate</groupId>
		    <artifactId>hibernate-core</artifactId>
		    <version>3.6.10.Final</version>
		</dependency>				
	</dependencies>		

	<build>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<resources>
			<resource>
	        	<directory>src/main/resources</directory>
	        	<filtering>true</filtering>
	      	</resource>
		</resources>
      	<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<fork>true</fork>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.19.1</version>
					<configuration>
						<skipTests>true</skipTests>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>		
	</build>

	<distributionManagement>
		<repository>
			<id>br.com.smartechnology.midas</id>
			<url>http://maven.smartechnology.com.br/repository/br.com.smartechnology.midas/</url>
		</repository>
	</distributionManagement>



</project>
